--- a/assets/style.css
+++ b/assets/style.css
@@ -1,175 +1,215 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "poppins";
+  font-family: "poppins";
 }
 
 #map {
-    height: 100vh;
+  height: 100vh;
 }
 
-
-/* SIDEBAR */
+/* sidebar */
 
 aside {
-    position: fixed;
-    z-index: 999999;
-    left: 20px;
-    background: rgba(53, 53, 53, 0.7);
-    margin-top: 30px;
-    height: 50vh;
-    width: 260px;
-    border-radius: 10px;
-    color: #fff;
-    overflow: hidden;
+  position: fixed;
+  z-index: 999999;
+  left: 20px;
+  background: rgba(53, 53, 53, 0.7);
+  margin-top: 30px;
+  height: 50vh;
+  width: 260px;
+  border-radius: 10px;
+  color: #fff;
+  overflow: hidden;
+  transition: all 0.5s;
 }
 
-@media (min-width: 768px) {
-    aside {
-        height: 70vh;
-    }
+/* gizli mod */
+
+.hide {
+  height: 90px !important;
 }
 
-aside:hover {
-    background: rgba(53, 53, 53, 1);
+.hide .head {
+  margin-bottom: 20px;
 }
 
-aside h1 {
-    font-family: "Indie Flower", cursive;
-    text-align: center;
-    font-size: 25px;
-    background: rgba(53, 53, 53);
-    border-radius: 10px;
-    letter-spacing: 3px;
-    padding: 5px;
-    margin: 20px 20px 0px 20px;
+.hide #arrow {
+  rotate: 180deg;
 }
 
-
-/* LIST SIDE */
-
-ul {
-    padding: 20px;
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    list-style: none;
-    height: 100%;
-    overflow-y: auto;
+.hide ul,
+.hide form {
+  display: none !important;
 }
 
-ul li {
-    background: #575757;
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-}
+/* form modu */
 
-ul li p:first-child {
-    font-size: 20px;
-    font-family: "Indie Flower", cursive;
-}
-
-ul li .icons {
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-}
-
-ul li i {
-    font-size: 20px;
-    cursor: pointer;
-    transition: all 0.3s;
-}
-
-ul li i:hover {
-    scale: 1.1;
-}
-
-ul li #fly:hover {
-    color: rgb(0, 217, 255);
-    filter: drop-shadow(0 0 10px rgb(0, 217, 255));
-}
-
-ul li #delete:hover {
-    color: crimson;
-    filter: drop-shadow(0 0 10px crimson);
-}
-
-
-/* FORM */
-
-#add-title {
-    display: none;
-}
-
-form {
-    display: none;
-    flex-direction: column;
-    gap: 20px;
-    margin: 30px 0;
-}
-
-form .field {
-    display: flex;
-    gap: 6px;
-    flex-direction: column;
-}
-
-form input,
-form select {
-    border: none;
-    outline: none;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-form .buttons {
-    display: flex;
-    gap: 10px;
-}
-
-form .buttons button {
-    font-family: "poppins";
-    flex: 1;
-    cursor: pointer;
-    outline: none;
-    border: none;
-    padding: 8px;
-    border-radius: 10px;
-    background: black;
-    color: white;
-    font-weight: bold;
-    font-weight: 600;
-    transition: all 0.3s;
-}
-
-form .buttons button:hover {
-    filter: brightness(60%);
-}
-
-form .buttons button:first-child {
-    background: #727171;
+.add {
+  height: 390px;
 }
 
 .add form {
-    display: flex;
+  display: flex;
 }
 
 .add #add-title {
-    display: block;
+  display: block;
 }
 
 .add ul,
 .add h1 {
-    display: none;
+  display: none;
+}
+
+@media (min-width: 768px) {
+  aside {
+    height: 93vh;
+  }
+}
+
+aside:hover {
+  background: rgba(53, 53, 53, 1);
+}
+
+aside .head {
+  font-family: "Indie Flower", cursive;
+  text-align: center;
+  background: rgba(53, 53, 53);
+  border-radius: 10px;
+  letter-spacing: 3px;
+  padding: 5px;
+  margin: 20px 20px 0px 20px;
+  display: flex;
+  align-items: center;
+  padding-right: 10px;
+}
+
+aside .head #arrow {
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+aside .head #arrow:hover {
+  filter: drop-shadow(0 0 10px white);
+}
+
+aside .head h1 {
+  flex: 1;
+  font-size: 25px;
+}
+
+/* liste alanı */
+
+ul {
+  padding: 20px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  list-style: none;
+  height: 100%;
+  overflow-y: auto;
+}
+
+ul li {
+  background: #575757;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+ul li p:first-child {
+  font-family: "Indie Flower", cursive;
+  font-size: 20px;
+}
+
+ul li .icons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+ul li i {
+  transition: all 0.3s;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+ul li i:hover {
+  scale: 1.1;
+}
+
+ul li #fly:hover {
+  color: rgb(0, 217, 255);
+  filter: drop-shadow(0 0 10px rgb(0, 217, 255));
+}
+
+ul li #delete:hover {
+  color: crimson;
+  filter: drop-shadow(0 0 10px crimson);
+}
+
+/* Form */
+
+#add-title {
+  display: none;
+}
+
+form {
+  display: none;
+  flex-direction: column;
+  gap: 20px;
+  margin: 10px 0;
+  padding: 20px;
+}
+
+form .field {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+form input,
+form select {
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+form .buttons {
+  display: flex;
+  gap: 10px;
+}
+
+form .buttons button {
+  font-family: "poppins";
+  flex: 1;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  padding: 8px;
+  border-radius: 10px;
+  background: black;
+  color: white;
+  font-weight: 600;
+  transition: all 0.3s;
+}
+
+form .buttons button:hover {
+  filter: brightness(60%);
+}
+
+form .buttons button:first-child {
+  background: #727171;
 }
